--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
     </head>
     <body>
         <div id="app"></div>
+        <script src="https://open.thunderurl.com/thunder-link.js"></script>
     </body>
 </html>
